--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -4,5 +4,8 @@ fixtures:
     stdlib:
       ref: "v6.0.0"
       repo: "https://github.com/puppetlabs/puppetlabs-stdlib"
+    mailalias_core:
+      ref: "1.0.5"
+      repo: "https://github.com/puppetlabs/puppetlabs-mailalias_core"
   symlinks:
     vision_exim: '#{source_dir}'
