--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,2 +1,3 @@
 ---
-vision_exim::catch_all_alias: 'vision-it'
+vision_exim::server::relay_nets: '10.0.0.0/8'
+vision_exim::client::smarthost: 'mail.service.consul'
